# cvkit

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CHANGES.txt  CMakeLists.txt  INSTALL.md  INSTALL.txt  LICENSE  LICENSE.txt  README.md  README.txt  USAGE.md  USAGE.txt  build_win.bat  third_party_packages.txt
bgui/: CMakeLists.txt  basewindow.h  basewindow_win32.cc  basewindow_x11.cc  fileimagewindow.cc  fileimagewindow.h  imageadapter.h  imageadapterbase.h  imagewindow.cc  imagewindow.h  listimagewindow.cc  listimagewindow.h  messagewindow.cc  messagewindow.h
cmake/: CVKITConfig.cmake.in  CVKITConfigVersion.cmake.in  FileAssociation.nsh  NSIS.template.in  PROJECTConfig.cmake.in  configure_link_libs.cmake  disable_psabi.cmake  optimization_flags.cmake  package_debian.cmake  package_win32.cmake  project_dependencies.cmake  project_version.cc.in  project_version.cmake  project_version.h.in
doc/: CMakeLists.txt  Doxyfile.in  main.dox
example/: 1095_param.txt  1096_param.txt  1097_disp.pfm  1097_param.txt  1097_rgb.ppm  1098_param.txt  1099_param.txt  CMakeLists.txt  README.txt
gimage/: CMakeLists.txt  analysis.cc  analysis.h  arithmetic.h  color.cc  color.h  compare.h  convolution.h  gabor.h  gauss.h  gauss_pyramid.h  gdal_io.cc  gdal_io.h  hdr.cc  hdr.h  image.h  io.cc  io.h  jpeg_io.cc  jpeg_io.h  laplace_pyramid.h  noise.h  paint.h  png_io.cc  png_io.h  pnm_io.cc  pnm_io.h  polygon.cc  polygon.h  raw_io.cc  raw_io.h  size.h  tiff_io.cc  tiff_io.h  view.cc  view.h
gmath/: CMakeLists.txt  camera.cc  camera.h  camgeom.cc  camgeom.h  distortion.cc  distortion.h  dmatrix.h  dvector.h  estimatedplane.cc  estimatedplane.h  homography.cc  homography.h  idw.cc  idw.h  linalg.cc  linalg.h  minpack.cc  minpack.h  polynomial.cc  polynomial.h  pose.cc  pose.h  quaternion.h  smatrix.h  sturmchain.h  svector.h
gmath/minpack/: dpmpar.c  enorm.c  f2c.h  fdjac2.c  lmder.c  lmdif.c  lmpar.c  qrfac.c  qrsolv.c
gutil/: CMakeLists.txt  barrier.h  barrier_cpp11.cc  barrier_nothread.cc  barrier_pthread.cc  exception.cc  exception.h  fixedint.h  misc.cc  misc.h  msgqueue.h  parameter.cc  parameter.h  proctime.h  properties.cc  properties.h  semaphore.h  semaphore_cpp11.cc  semaphore_nothread.cc  semaphore_pthread.cc  semaphore_win32.cc  thread.h  thread_cpp11.cc  thread_nothread.cc  thread_pthread.cc  version.h
gvr/: CMakeLists.txt  cameracollection.cc  cameracollection.h  coloredlines.cc  coloredlines.h  coloredmesh.cc  coloredmesh.h  coloredpointcloud.cc  coloredpointcloud.h  extrusion.cc  extrusion.h  glcamera.cc  glcamera.h  glcoloredlines.cc  glcoloredlines.h  glcoloredmesh.cc  glcoloredmesh.h  glcoloredpointcloud.cc  glcoloredpointcloud.h  glmain.cc  glmain.h  glmesh.cc  glmesh.h  glmisc.cc  glmisc.h  globject.h  glpointcloud.cc  glpointcloud.h  gltext.cc  gltext.h  gltexturedmesh.cc  gltexturedmesh.h  glworld.cc  glworld.h  mesh.cc  mesh.h  model.cc  model.h  multitexturedmesh.cc  multitexturedmesh.h  (+6 more)
tools/: CMakeLists.txt  imgcmd.cc  plycmd.cc  plyv.cc  prop2octave.cc  sv.cc  win_main.cc
tools/resources/: make_inl.sh  plyv.desktop  plyv_128.xpm  sv.desktop  sv_128.inl  sv_128.xpm
